--- a/assets/css/celulares.scss
+++ b/assets/css/celulares.scss
@@ -28,7 +28,7 @@ $xxlarger2:12.8rem;
 
 // grid de 8 pontos
 
-$titulo: 1.4rem;
+$titulo: 1.5rem;
 $subtitulo: $titulo / 1.618;
 $textobasico: $subtitulo / 1.618;
 
@@ -56,7 +56,7 @@ $items:#9440E7;
 
 
 /* Estilos para tablets */
-@media only screen and (min-width: 0px) and (max-width: 480px) {
+@media only screen and (min-width: 0px) and (max-width: 768px) {
   /* Tus estilos para tablets aquí */
  
  
@@ -90,6 +90,7 @@ $items:#9440E7;
    display: flex;
    justify-content: center;
    align-items: center;
+   
   }
   
   .heromenuprincipal_menu {
@@ -196,6 +197,7 @@ $items:#9440E7;
    margin-bottom: $large;
   
    overflow-x: auto;
+
   
   
    .categoriadePets-item{
@@ -205,7 +207,7 @@ $items:#9440E7;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: $subtitulo *1.1;
+    font-size: $subtitulo;
     color: #9440E7;
   cursor: pointer;
    margin-left: 8px;
@@ -310,10 +312,12 @@ $items:#9440E7;
      }
   
      .carddog-endereco {
-      font-size: $subtitulo;
+      font-size: $subtitulo * 1.5;
       margin-bottom: $micro;
       letter-spacing: - 0.1px;
       margin-bottom: $micro2;
+      
+      display: flex;
   
       i{
        font-size: $subtitulo;
@@ -383,7 +387,7 @@ $items:#9440E7;
   
 
 .aboutUs{
-  width: 100vw; height: 30vh;
+  width: 100vw; height: 35vh;
   display: flex;
   flex-wrap: wrap;
   background-color: #9440E7;
@@ -416,6 +420,8 @@ $items:#9440E7;
       font-size: $subtitulo;
       width: 60%;
       color: #fff;
+     
+      margin-bottom: 3.2rem;
       
     }
   }
