--- a/assets/sass/devices/tablets/_tablets.scss
+++ b/assets/sass/devices/tablets/_tablets.scss
@@ -1,18 +1,13 @@
+@use '../../var/var' as *;
 
-/* Estilos para tablets */
-@media only screen and (min-width: 0px) and (max-width: 480px) {
- /* Tus estilos para tablets aquí */
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+ /* Estilos para tablets aqui */
+ /* Por exemplo */
 
-
- body{
-  background-color: #ebebeb;
-  
- }
- 
- 
  @mixin tags($bg, $color) {
- 
+  
   background-color: $bg;
+  
   color: $color;
   width: 5.6rem;
   height: 2.4rem;
@@ -34,6 +29,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  
  }
  
  .heromenuprincipal_menu {
@@ -114,6 +110,7 @@
   border-radius: 16px;
   overflow: hidden;
   margin-bottom: $large;
+  background: $backgroundLigth;
  
  
   img {
@@ -139,6 +136,7 @@
   margin-bottom: $large;
  
   overflow-x: auto;
+
  
  
   .categoriadePets-item{
@@ -148,7 +146,7 @@
    display: flex;
    justify-content: center;
    align-items: center;
-   font-size: $subtitulo *1.1;
+   font-size: $subtitulo;
    color: #9440E7;
  cursor: pointer;
   margin-left: 8px;
@@ -202,19 +200,22 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  gap: 16px;
  
  
   .carddog {
  
-   width: calc(100vw - 32px); height:$xxlarger2;
+   width: calc(50vw - 32px); height:$xxlarger2;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 12px;
+   
    overflow: hidden;
    box-shadow: 2px 2px 20px rgba(0,0,0,0.3);
    background-color: #fff;
    margin-bottom: $small;
+  
    
  
  
@@ -232,7 +233,7 @@
    
  
     img {
-     width: 120%;
+     width: 100%;
     }
    }
  
@@ -253,10 +254,12 @@
     }
  
     .carddog-endereco {
-     font-size: $subtitulo;
+     font-size: $subtitulo * 1.5;
      margin-bottom: $micro;
      letter-spacing: - 0.1px;
      margin-bottom: $micro2;
+     
+     display: flex;
  
      i{
       font-size: $subtitulo;
@@ -270,7 +273,11 @@
      height: 2.4rem;
      
      display: flex;
-     justify-content: space-between;
+     justify-content: center;
+   
+     gap: 3.2em;
+
+   
      
  
     }
@@ -302,317 +309,201 @@
   }
  }
  /* Otros estilos específicos para celulares */
+
+.btnChargerGroup{
+ width: 50vw;
+ margin: 0 auto;
+
+ height: 3.2rem;
+ display: flex;
+ justify-content: space-around;
+ margin-bottom: 3.2rem;
+ margin-top: 1.6rem;
+
+ button{
+   width: 2.4rem; height: 2.4rem;
+   border-radius: 0.2rem;
+   color: $items;
+   font-weight: bold;
+   background-color: #fff;
+   font-size: $titulo;
+   cursor: pointer;
+ }
 }
+ 
+
+.aboutUs{
+ width: 100vw; height: 35vh;
+ display: flex;
+ flex-wrap: wrap;
+ background-color: #9440E7;
+ justify-content: center;
+ 
 
 
-@media only screen and (min-width: 481px) and (max-width: 768px) 
-{
- 
- body{
-  background-color: #ebebeb;
-  
- }
- 
- 
- @mixin tags($bg, $color) {
- 
-  background-color: $bg;
-  color: $color;
-  width: 5.6rem;
-  height: 2.4rem;
-  border-radius: 5px;
-  display: flex;
-  justify-content: center;
-  align-items:  center;
-  font-size: $subtitulo;
-  font-weight: bold;
- 
- }
- 
- 
- 
- 
- header {
-  width: 100vw;
-  height: $xxlarger2;
-  display: flex;
-  justify-content: center;
-  align-items: center;
- }
- 
- .heromenuprincipal_menu {
- 
-  display: flex;
-  width: 100vw;
-  height: $large;
-  justify-content: space-between;
-  align-items: center;
- 
-  .heromenuprincipal_lista
-  {
+ .aboutUs-titulo{
+   width: 100%;
+   font-size: $titulo;
+   text-align: center;
+   margin: 0 auto;
    
-   width: 100vw; height: 100vh;
-   position: absolute;
-   z-index: 999;
-   background-color: #9440E7;
+   position: relative;
+   flex:none;
+   top: 3.2rem;
+   display: flex;
+   justify-content: center;
+   flex-direction: column;
+   align-items: center;
+  
+   
+   h1{
+     width: 60%;
+     color: #fff;
+    
+   }
+
+   p{
+     font-size: $subtitulo;
+     width: 60%;
+     color: #fff;
+    
+     margin-bottom: 3.2rem;
+     
+   }
+ }
+
+ .aboutUsCard{
+   width: 25vw; height: 8rem;
+   background-color: #fff;
+   margin-right: 0.8rem;
    display: flex;
    flex-direction: column;
-   justify-content: space-around;
-   align-items: center;
-   top: 0;
- animation: slideMenu 1s ease;
- border-bottom: 10px solid #9440E7;
- 
- 
- 
-   .heromenuprincipal_item{
-    font-size: $titulo * 3;
-   
-    color: #fff;
-    
-    a{
-     color: #9440E7;
-     color: #fff;
-     
-    }
-   }
-  }
- 
-  .heromenuprincipal-imgLogo {
-   width: 9.6rem;
-   margin-left: 1.6rem;
- 
-   img {
-    width: 100%;
-   }
-  }
- 
-  .heromenuprincipal-menuToggle {
-   width: calc(8rem + 8px);
-   height: 4rem;
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   margin-right: 1.6rem;
- 
-   i {
-    width: 4rem;
-    height: 4rem;
-    background-color: #ebebeb;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: $primaryDark;
-    font-size: 2.4rem;
-    border-radius: 12px;
-   }
-  }
- }
- 
- 
- .herobannerPrincipal {
-  width: calc(100vw - 32px);
- 
-  margin-left: auto;
-  margin-right: auto;
-  border-radius: 16px;
-  overflow: hidden;
-  margin-bottom: $large;
- 
- 
-  img {
-   width: 100%;
-  }
- }
- 
- .menuPets{
-  width: 100vw;
-  overflow-x: auto;
-  scrollbar-width: none; /* Para Firefox */
-   -ms-overflow-style: none;
- }
- 
- 
- 
- 
- 
- .categoriadePets{
-  width: 130vw;
-  display: flex;
-  justify-content: flex-start;
-  margin-bottom: $large;
- 
-  overflow-x: auto;
- 
- 
-  .categoriadePets-item{
-   width: 11.2rem; height: 4.8rem;
-   background: #E3E1E1;
-   border-radius: 12px;
-   display: flex;
    justify-content: center;
    align-items: center;
-   font-size: $subtitulo *1.1;
-   color: #9440E7;
- cursor: pointer;
-  margin-left: 8px;
-  box-sizing: border-box;
+   border-radius: 1.2rem;
+   cursor: pointer;
  
- 
+   header{
+     
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: center;
+     height: auto;
+   }
+   
+
+   h1{
+     
+    
+     font-size: $titulo - 0.2;
+   }
+
    i{
-    color: #fff;
-    font-size: $titulo * 1.2;
-    margin-right: 4px;
-   
-    
-   color: #9440E7;
-    
- 
+     color: #9440E7;
+     font-size: $titulo * 1.3;
    }
-  }
-  
- }
- 
- 
- 
- 
- 
- 
- .itemSelecionado{
-  background: $items !important;
-  color: #ebebeb !important;
-  i{
-   color: #fff !important;
-   
-  }
- }
- 
- 
- 
- 
- 
- 
- 
- .disponiveis-titulo{
-  font-weight: bold;
-  margin-bottom: $small;
-  margin-left: 16px;
-  font-size: $titulo;
-  color: rgba(30,30,30,0.6);
- }
- 
- .disponiveisAdocao {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
- 
- 
-  .carddog {
- 
-   width:calc(50vw - 32px); height:$xxlarger2;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   border-radius: 12px;
-   overflow: hidden;
-   box-shadow: 2px 2px 20px rgba(0,0,0,0.3);
-   background-color: #fff;
-   margin-right: 8px;
-   margin-bottom: 8px;
- 
-   
- 
- 
-   .carddog-img {
-    width: 30%; aspect-ratio: 1/1;
- 
-    margin-left: $small;
-    margin-right: 1.6rem;
-    background: $carddogBack;
-    border-radius: 12px;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    overflow: hidden;
-   
- 
-    img {
-     width: 120%;
-    }
-   }
- 
-   .carddog-descricoes {
-    width: calc(100% - 20%);
- 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
- 
- 
-    .carddog-dogTitulo {
+
+
+   .aboutUsCard-cabecalho{
+     width: 50%;
+     text-align: center;
      font-size: $titulo;
-     margin-bottom: $micro;
-     font-weight: bolder;
- 
-    }
- 
-    .carddog-endereco {
-     display: flex;
-     margin-bottom: $micro2;
-  
- 
-     i{
-      font-size: $subtitulo;
-      margin-right: 0.4rem;
-     }
-     p{
-      font-size: $subtitulo;
-      
-     }
- 
-    }
- 
-    .carddog-taggroup {
-     width: 13rem;
-     height: 2.4rem;
-     
-     display: flex;
-     justify-content: space-between;
-     
- 
-    }
- 
-    .carddog-tags-idade {
- 
-     @include tags($tagprimaryBg, $tagprimaryColor);
-    }
- 
-    .carddog-tags-genero {
-     @include tags($tagSecondBg, $tagsecondColor);
-    }
+    
+
  
    }
- 
-  }
- 
- }
- 
- 
- @keyframes slideMenu{
-  to{
-  
-   left:0px;
-  }
- 
-  from{
-   left: 100vw;
-  }
- }
 
- 
+   .aboutUsCard-paragrafo{
+     border: 2px solid blue;
+     display: none;
+   
+   }
 
+   .aboutSeeMore{
+     width: 80%; height: 3.2rem;
+     font-size: $subtitulo - 0.1;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+
+
+
+     i{
+       font-size: $subtitulo * 1.2;
+     }
+   }
+
+
+ }
 }
 
 
+.slogaOng{
+ width: 100vw;
+
+ height: 35vh; border: 2px solid black;
+ background-image: url(../../imgs/components/juntos.png);
+background-repeat: no-repeat;
+ background-size: 100%;
+ 
+}
+
+.footerOngFofuxos{
+
+ width: 100vw;
+ height: auto;
+ 
+ background-color: #53403A;
+ display: flex;
+ justify-content: space-between;
+
+ figure{
+   width: 20%;
+   margin-left: 1.6rem;
+
+   img{
+     width: 60%;
+   }
+ }
+
+ ul{
+
+   width: 40vw;
+   display: flex;
+   // margin-right: 3.2rem;
+   li{
+     font-size: $titulo;
+     display: flex;
+     width: 60%;
+     
+     gap: 0.8rem;
+     align-items: center;
+
+     i{
+       color: #F2CB76;
+     }
+
+     a
+     {
+       color: inherit;
+       color: #fff;
+     }
+   }
+ }
+}
+
+
+.desenvolvedor{
+ width: 100vw;
+ height: 5vw;
+ background-color: #F2CB76;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ font-size: $titulo;
+}
+
+
+ /* Outros estilos... */
+}
