--- a/assets/sass/devices/mobile/_mobile.scss
+++ b/assets/sass/devices/mobile/_mobile.scss
@@ -14,7 +14,7 @@
   display: flex;
   justify-content: center;
   align-items:  center;
-  font-size: $subtitulo;
+  font-size: $subtitulo * 1.2;
   font-weight: bold;
  
  }
@@ -57,7 +57,8 @@
  
  
    .heromenuprincipal_item{
-    font-size: $titulo * 3;
+    font-size: $titulo * 2;
+    
    
     color: #fff;
     
@@ -145,16 +146,17 @@
    display: flex;
    justify-content: center;
    align-items: center;
-   font-size: $subtitulo;
+   font-size: $subtitulo * 1.1;
    color: #9440E7;
  cursor: pointer;
   margin-left: 8px;
   box-sizing: border-box;
+
  
  
    i{
     color: #fff;
-    font-size: $titulo * 1.2;
+    font-size: $titulo * 1.3;
     margin-right: 4px;
    
     
@@ -192,6 +194,7 @@
   margin-left: 16px;
   font-size: $titulo;
   color: rgba(30,30,30,0.6);
+  
  }
  
  .disponiveisAdocao {
@@ -250,7 +253,7 @@
     }
  
     .carddog-endereco {
-     font-size: $subtitulo * 1.5;
+     font-size: $subtitulo * 1.6;
      margin-bottom: $micro;
      letter-spacing: - 0.1px;
      margin-bottom: $micro2;
@@ -258,8 +261,9 @@
      display: flex;
  
      i{
-      font-size: $subtitulo;
+      font-size: $subtitulo * 1.1;
       margin-right: 0.4rem;
+    
      }
  
     }
@@ -355,7 +359,7 @@
    }
 
    p{
-     font-size: $subtitulo;
+     font-size: $subtitulo  * 1.3;
      width: 60%;
      color: #fff;
     
@@ -388,12 +392,12 @@
    h1{
      
     
-     font-size: $titulo - 0.2;
+     font-size: $titulo;
    }
 
    i{
      color: #9440E7;
-     font-size: $titulo * 1.3;
+     font-size: $titulo * 1.4;
    }
 
 
@@ -413,11 +417,12 @@
    }
 
    .aboutSeeMore{
-     width: 80%; height: 3.2rem;
+     width: 80%; height: 3rem;
      font-size: $subtitulo - 0.1;
      display: flex;
      justify-content: center;
      align-items: center;
+     
 
 
 
@@ -442,32 +447,38 @@
 .footerOngFofuxos{
 
  width: 100vw;
- height: auto;
+ height: 5vh;
+ 
  
  background-color: #53403A;
  display: flex;
  justify-content: space-between;
+ align-items: center;
 
  figure{
    width: 20%;
-   margin-left: 1.6rem;
-
+ 
+  
    img{
      width: 60%;
    }
  }
 
  ul{
-
-   width: 40vw;
+ 
+   width: auto;
    display: flex;
+   margin-right: 1.6rem;
+   gap: 1rem;
    // margin-right: 3.2rem;
    li{
-     font-size: $titulo;
+     font-size: $titulo * 1.1;
+
      display: flex;
-     width: 60%;
+     justify-content: center;
+    
      
-     gap: 0.8rem;
+   
      align-items: center;
 
      i{
